--- a/auto_py_to_exe/web/css/main.css
+++ b/auto_py_to_exe/web/css/main.css
@@ -107,6 +107,11 @@
   white-space: pre-wrap;
 }
 
+#warnings > div > p,
+#warnings > div > p a {
+  color: var(--warning-text);
+}
+
 /* Sections */
 
 div[id*='section'] {
